<resources>
    <string name="app_name">Antiques</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="get_your_gift_easier">Get Your gift easier</string>
    <string name="introtext1">just select your gift and buy with one click ;)</string>
    <string name="introtext2">It is not an ordinary shopping , but it is
 handmade of all kinds. (crochet, drawing,
craving, embroidery and lap,,etc……) </string>
    <string name="introtext3">Anyone can share what he did with his hands in the app and sell it in an easy way while ensuring safety</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="trade_online">Trade online</string>
    <string name="finsh">Finsh</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="here"> Here.</string>
    <string name="password">password</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="title_activity_category">category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="style_square">square_box</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Art">ART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend">resend</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="user_name">user name</string>
    <string name="create_account_to_continue">Create Account to Continue</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">login now</string>
    <string name="please_login_to_your_account">Please,login to your account</string>
    <string name="favorite">Favorite</string>
    <string name="my_antique">My Antique</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="sculpture">Sculpture</string>
    <string name="embroidery">Embroidery</string>
    <string name="accessories">Accessories</string>
    <string name="earthenware">Earthenware</string>
    <string name="bags">Bags</string>
    <string name="pullovers">Pullovers</string>
    <string name="scarf">Scarf</string>
    <string name="brides">Brides</string>
    <string name="dresses">Dresses</string>
    <string name="baby">Baby</string>
    <string name="wedding_planner">Wedding Planner</string>
    <string name="crochet">Crochet</string>
    <string name="all_categories">All Categories</string>
    <string name="sewing">Sewing</string>
    <string name="title_activity_main22">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>