<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homepage"
            android:menuCategory="secondary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:menuCategory="secondary"
            android:title="@string/my_antique" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_fav"
            android:menuCategory="secondary"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:menuCategory="secondary"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_categorie"
            android:icon="@drawable/ic_list"
            android:menuCategory="secondary"
            android:title="@string/categories" />
    </group>
</menu>