<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.antiqques.ui.homepage.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.antiqques.ui.homepage.ProfileFragment"
        android:label="@string/my_antique"
        tools:layout="@layout/fragment_my_antiques" />
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.antiqques.ui.homepage.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.antiqques.ui.homepage.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_categorie"
        android:name="com.example.antiqques.ui.homepage.Categories"
        android:label="@string/categories"
        tools:layout="@layout/cart_fragment" />


</navigation>