<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Backgroundcolor"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_28sdp"
        android:src="@mipmap/ic_logo_launcher_round" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rounded_shpae"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_73sdp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Login_tv"
            android:layout_width="210dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/please_login_to_your_account"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_email_24"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_password_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_pass_btn"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/_90sdp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"

        />

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="192dp"
        android:layout_height="44.55dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:text="LOGIN" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/register_account_btn"
            android:layout_width="196dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>